@@ -41,6 +41,7 @@ Path::Class = 0
 Text::Template = 0
 
 [Prereqs / TestRequires]
+File::Which = 0
 Test::DZil = 0
 Test::More = 0.88
 Test::Differences = 0
